# rvegen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/rvegen/: rvegen.h
include/rvegen/include/: bounding_box_base.h  box.h  box_bounding.h  check_distance.h  check_distance.h.autosave  circle.h  cylinder.h  ellipse.h  ellipsoid.h  polygon.h  rectangle.h  rectangle_bounding.h  rve_generator.h  rve_shape_input.h  samepack_heuristic.h  shape_base.h  sphere.h  write_gmsh_geo.h
rvegen/: rvegen_config.h
rvegen/include/: cylinder.h
